--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -5,7 +5,7 @@
     <!-- About screen blog label -->
     <string name="About.blog">Discord</string>
     <!-- About screen footer -->
-    <string name="About.footer">Made by Electra team. Version %1$s Build %2$s</string>
+    <string name="About.footer">Made by the Electra Team. Version %1$s Build %2$s</string>
     <!-- Privay Policy button label -->
     <string name="About.privacy">隱私政策</string>
     <!-- About screen reddit label -->
